--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -49,9 +49,9 @@ const PROYECTS = [
         isLastOdd: false,
     },
     {
-        title: "Simulador Code-2 Web",
+        title: "Simulador Code-2 Web (BETA)",
         description:
-            "Simulador de la aplicación Code-2. Esta aplicación permite a los alumnos de la Universidad Miguel Hernández realizar simulaciones de exámenes y ver sus resultados.",
+            "Simulador de la aplicación Code-2. Esta aplicación permite a los alumnos de la Universidad Miguel Hernández realizar simulaciones. Actualmente en desarrollo...",
         link: "https://coyotemmk.github.io/Simulador-code-2/",
         github: "https://github.com/coyoteMMK/Simulador-code-2",
         image: "/porfolio-santos/proyects/Simulador_code2.webp",
@@ -60,7 +60,7 @@ const PROYECTS = [
         isLastOdd: false,
     },
     {
-        title: "Fine-tuning Code-2",
+        title: "Fine-tuning Code-2 (BETA)",
         description:
             "Proyecto de fine-tuning del lenguaje Code-2. Reentrenamiento del modelo T5-Small de Google para que aprenda a generar codigo en lenguaje Code-2 a traves de instrucciones LN que el usuario le aporta. Actualmente en desarrollo...",
         link: "https://huggingface.co/coyoteMMK/CodeGPT",
